--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <input type="number" id="user-input" />
     <button id="btn">Guess</button>
 
-
+    <script src="random-number.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
