--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <input type="number" id="user-input" />
     <button id="btn">Guess</button>
 
+    <div style="margin-top: 10px;">
+    <a href="./lucky_number.html">Get Your Lucky number!!</a>
+    </div>
+
     <script src="random-number.js"></script>
     <script src="app.js"></script>
   </body>
