--- a/lucky_number.html
+++ b/lucky_number.html
@@ -9,7 +9,15 @@
 </head>
 <body>
     
-    
+
     <script src="./random-number.js"></script>
+    <script>
+        const num = generateRandomNumber(100);
+        const message = `Your lucky number is ${num}!!!`;
+
+        alert(message);
+
+
+    </script>
 </body>
 </html>
