--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Guess Number</h1>
     <input type="number" id="user-input" />
-    <button id="btn">Guess</button>
+    <button id="btn">Guess what on Local</button>
 
     <div style="margin-top: 10px;">
     <a href="./lucky_number.html">Get Your Lucky number!!</a>
@@ -18,5 +18,6 @@
 
     <script src="random-number.js"></script>
     <script src="app.js"></script>
+    <script src="other.js"></script>
   </body>
 </html>
